--- a/style.css
+++ b/style.css
@@ -15,3 +15,9 @@ header{
     height: 200px;
     background-color: crimson;
 }
+main{
+    background-color: orange;
+}
+footer{
+    background-color: cornflowerblue;
+}
